# pocketbook

./: .env.example  README.md  package.json  pnpm-lock.yaml
src/: App.tsx
src-tauri/: .env.example  .env.temp  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  pocketbase_sdk_extend.rs  project_manager.rs  types.rs  utils.rs
src/components/: Layout.tsx  Loading.tsx  ProjectCard.tsx  ProjectList.tsx
src/pages/: Home.tsx  NewProject.tsx  ProjectDetails.tsx  Splashscreen.tsx
src/store/: index.ts
src/types/: index.ts
src/utils/: index.ts
